# cloudmeter

./: .gitignore  README.md  cli.py  pyproject.toml
cloudmeter/: core.py
cloudmeter/providers/aws/: main.py  managed.py  unmanaged.py
